# imageProcessor

./: .env  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: python-app.yml
app/: app.py  config.py  logger.py
app/controllers/: image_processor_controller.py
app/errors/: image_processor_error.py
app/services/: image_processor_service.py
