[tool.poetry]
name = "image-processor"
version = "0.1.0"
description = ""
authors = ["Raken Hammed <raken.hammed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "22.10.0"
isort = "5.10.1"
pylint = "2.15.3"
pre-commit = "2.20.0"
Flask = "2.2.2"
python-dotenv = "0.21.1"
astroid = "2.13.5"
cfgv = "3.3.1"
click = "8.1.3"
dill = "0.3.6"
distlib = "0.3.6"
filelock = "3.9.0"
identify = "2.5.18"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
lazy-object-proxy = "1.9.0"
MarkupSafe = "2.1.2"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
nodeenv = "1.7.0"
pathspec = "0.11.0"
platformdirs = "3.0.0"
PyYAML = "6.0"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.11.6"
typing-extensions = "4.4.0"
virtualenv = "20.19.0"
Werkzeug = "2.2.3"
wrapt = "1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[tool.black]
profile = "black"

[tool.isort]
profile = "black"